<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create_account">Create Account</string>
    <string name="full_name_hint">Full name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="terns_and_conditions">Agree with <b>Terns &amp; Conditions</b></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="login_account">Login Account</string>
    <string name="account_question">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
</resources>